<resources>
    <string name="app_name">MVYShortVideoEditorAndroid</string>
    <string name="inputTextForSubtitle">输入文字作为字幕</string>
    <string name="music">音乐</string>
    <string name="originalMusic">原声</string>
    <string name="subtitle">字幕</string>
    <string name="cover">选封面</string>
    <string name="edit_in_step_shoot">合拍</string>
    <string name="edit_original_open">原声开</string>
    <string name="edit_effect">特效</string>
    <string name="withdraw">撤销</string>
    <string name="effect_filter_rb">滤镜特效</string>
    <string name="effect_time_rb">时间特效</string>

    <string-array name="range_array" >
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>不限</item>
    </string-array>
</resources>
